RESOLVED FIXED19544
DashboardRegion pieces are leaking
https://bugs.webkit.org/show_bug.cgi?id=19544
Summary DashboardRegion pieces are leaking
Darin Adler
Reported 2008-06-14 00:41:01 PDT
My recent change introduced a leak of objects owned by each DashboardRegion, because I made ~Rect non-virtual. I have a fix.
Attachments
patch (2.51 KB, patch)
2008-06-14 00:43 PDT, Darin Adler
sam: review+
Darin Adler
Comment 1 2008-06-14 00:43:57 PDT
Note You need to log in before you can comment on or make changes to this bug.